--- a/suite-native/module-passphrase/package.json
+++ b/suite-native/module-passphrase/package.json
@@ -30,6 +30,7 @@
         "@suite-native/toasts": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/styles": "workspace:*",
+        "expo-linear-gradient": "13.0.2",
         "react": "18.2.0",
         "react-native": "0.74.1",
         "react-native-reanimated": "3.11.0",
