--- a/suite-native/module-connect-device/tsconfig.json
+++ b/suite-native/module-connect-device/tsconfig.json
@@ -17,6 +17,9 @@
         { "path": "../intl" },
         { "path": "../link" },
         { "path": "../navigation" },
+        { "path": "../passphrase" },
+        { "path": "../theme" },
+        { "path": "../toasts" },
         { "path": "../../packages/connect" },
         { "path": "../../packages/styles" }
     ]
