--- a/packages/transport-bridge/package.json
+++ b/packages/transport-bridge/package.json
@@ -20,6 +20,7 @@
         "build:lib": "yarn build:js"
     },
     "devDependencies": {
+        "@types/json-stable-stringify": "^1",
         "esbuild": "^0.20.0",
         "html-webpack-plugin": "^5.6.0",
         "pkg": "^5.8.1",
@@ -32,6 +33,7 @@
         "@trezor/theme": "workspace:*",
         "@trezor/transport": "workspace:*",
         "@trezor/utils": "workspace:*",
+        "json-stable-stringify": "^1.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-intl": "^6.6.2",
