--- a/suite-native/app/tsconfig.json
+++ b/suite-native/app/tsconfig.json
@@ -45,8 +45,10 @@
             "path": "../module-accounts-management"
         },
         { "path": "../module-add-accounts" },
-        { "path": "../module-connect-device" },
         { "path": "../module-dev-utils" },
+        {
+            "path": "../module-device-authentication"
+        },
         { "path": "../module-home" },
         { "path": "../module-onboarding" },
         { "path": "../module-receive" },
