--- a/docker/docker-compose.suite-dev.yml
+++ b/docker/docker-compose.suite-dev.yml
@@ -4,7 +4,7 @@
 version: "3.9"
 services:
   trezor-user-env-unix:
-    image: ghcr.io/trezor/trezor-user-env:c702cbb2f67ccb39573e529721cb8f1145cdd891
+    image: ghcr.io/trezor/trezor-user-env
     environment:
       - DISPLAY=$DISPLAY
       - QT_X11_NO_MITSHM=1
