ci(github): add identify-release-packages to needs in deploy-npm-connect job
(cherry picked from commit 2543308d84c784daea3cedad5b7711a7e72ad16c)

--- a/.github/workflows/release-connect-npm.yml
+++ b/.github/workflows/release-connect-npm.yml
@@ -101,7 +101,7 @@ jobs:
   deploy-npm-connect:
     name: Deploy NPM ${{ needs.identify-release-packages.outputs.deploymentType }} ${{ matrix.package }}
     # We only deploy connect NPM once dependencies have been deployed successfully.
-    needs: [deploy-npm-connect-dependencies]
+    needs: [identify-release-packages, deploy-npm-connect-dependencies]
     environment: production-connect
     runs-on: ubuntu-latest
     strategy:
