feat(suite-native): device authentication package

--- a/suite-native/device/tsconfig.json
+++ b/suite-native/device/tsconfig.json
@@ -19,6 +19,7 @@
         { "path": "../analytics" },
         { "path": "../atoms" },
         { "path": "../biometrics" },
+        { "path": "../device-authentication" },
         { "path": "../device-mutex" },
         { "path": "../feature-flags" },
         { "path": "../helpers" },
