--- a/suite-native/module-device-authentication/package.json
+++ b/suite-native/module-device-authentication/package.json
@@ -20,6 +20,7 @@
         "@suite-native/alerts": "workspace:*",
         "@suite-native/atoms": "workspace:*",
         "@suite-native/device": "workspace:*",
+        "@suite-native/device-authentication": "workspace:*",
         "@suite-native/device-mutex": "workspace:*",
         "@suite-native/forms": "workspace:*",
         "@suite-native/intl": "workspace:*",
