--- a/suite-native/module-device-authentication/tsconfig.json
+++ b/suite-native/module-device-authentication/tsconfig.json
@@ -12,6 +12,7 @@
         { "path": "../alerts" },
         { "path": "../atoms" },
         { "path": "../device" },
+        { "path": "../device-authentication" },
         { "path": "../device-mutex" },
         { "path": "../forms" },
         { "path": "../intl" },
