--- a/packages/connect/package.json
+++ b/packages/connect/package.json
@@ -84,13 +84,11 @@
         "blakejs": "^1.2.1",
         "bs58": "^5.0.0",
         "bs58check": "^3.0.1",
-        "cross-fetch": "^4.0.0",
-        "events": "^3.3.0"
+        "cross-fetch": "^4.0.0"
     },
     "devDependencies": {
         "@trezor/trezor-user-env-link": "workspace:*",
         "@types/karma": "^6.3.8",
-        "@types/parse-uri": "^1.0.2",
         "babel-loader": "^9.1.3",
         "ethereum-cryptography": "^2.1.3",
         "jest": "29.7.0",
