--- a/suite-common/formatters/package.json
+++ b/suite-common/formatters/package.json
@@ -18,14 +18,11 @@
         "@suite-common/suite-constants": "workspace:*",
         "@suite-common/suite-types": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
-        "@suite-common/wallet-core": "workspace:*",
-        "@suite-common/wallet-types": "workspace:*",
         "@suite-common/wallet-utils": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/utils": "workspace:*",
         "date-fns": "^2.30.0",
         "react": "18.2.0",
-        "react-intl": "^6.6.2",
-        "react-redux": "8.0.7"
+        "react-intl": "^6.6.2"
     }
 }
