--- a/suite-common/icons/package.json
+++ b/suite-common/icons/package.json
@@ -25,6 +25,7 @@
         "styled-components": "^6.1.8"
     },
     "devDependencies": {
+        "prettier": "3.2.5",
         "svgo": "3.2.0"
     }
 }
