--- a/suite-common/token-definitions/package.json
+++ b/suite-common/token-definitions/package.json
@@ -27,9 +27,6 @@
         "jws": "^4.0.0"
     },
     "devDependencies": {
-        "@types/fs-extra": "^11.0.4",
-        "ajv": "^8.12.0",
-        "fs-extra": "^11.2.0",
-        "json-schema-to-typescript": "^13.1.2"
+        "ajv": "^8.12.0"
     }
 }
