--- a/suite-native/helpers/package.json
+++ b/suite-native/helpers/package.json
@@ -14,9 +14,7 @@
     "dependencies": {
         "@mobily/ts-belt": "^3.13.1",
         "@suite-native/toasts": "workspace:*",
-        "@trezor/connect": "workspace:*",
         "expo-clipboard": "6.0.3",
-        "react": "18.2.0",
-        "react-native": "0.74.1"
+        "react": "18.2.0"
     }
 }
