chore(suite): unused package dependencies removed

--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -1,7 +1,5 @@
 {
-    "ignore-patterns": [
-        "libDev"
-    ],
+    "ignore-patterns": ["libDev"],
     "ignores": [
         "babel*",
         "karma*",
