chore(suite-native): global passphrase hook

--- a/suite-native/device/tsconfig.json
+++ b/suite-native/device/tsconfig.json
@@ -30,5 +30,9 @@
         { "path": "../../packages/device-utils" },
         { "path": "../../packages/styles" }
     ],
-    "include": [".", "**/*.json"]
+    "include": [
+        ".",
+        "**/*.json",
+        "../passphrase/src/useHandleDeviceRequestsPassphrase.ts"
+    ]
 }
