--- a/.github/workflows/release-suite-definitions.yml
+++ b/.github/workflows/release-suite-definitions.yml
@@ -45,12 +45,12 @@ jobs:
           yarn nfts simple ethereum jws
           yarn nfts simple polygon-pos jws
           yarn nfts simple binance-smart-chain jws
-          yarn nfts simple optimism jws
+          yarn nfts simple optimistic-ethereum jws
           yarn coins simple ethereum jws
           yarn coins simple ethereum-classic jws
           yarn coins simple polygon-pos jws
           yarn coins simple binance-smart-chain jws
-          yarn coins simple optimism jws
+          yarn coins simple optimistic-ethereum jws
           yarn coins simple cardano jws
           yarn coins simple solana jws
           yarn coins advanced solana json
@@ -66,12 +66,12 @@ jobs:
           yarn nfts simple ethereum jws
           yarn nfts simple polygon-pos jws
           yarn nfts simple binance-smart-chain jws
-          yarn nfts simple optimism jws
+          yarn nfts simple optimistic-ethereum jws
           yarn coins simple ethereum jws
           yarn coins simple ethereum-classic jws
           yarn coins simple polygon-pos jws
           yarn coins simple binance-smart-chain jws
-          yarn coins simple optimism jws
+          yarn coins simple optimistic-ethereum jws
           yarn coins simple cardano jws
           yarn coins simple solana jws
           yarn coins advanced solana json
