--- a/.github/workflows/release-suite-desktop-web-production.yml
+++ b/.github/workflows/release-suite-desktop-web-production.yml
@@ -12,6 +12,11 @@ on:
         required: false
         type: boolean
         default: false
+      publishDesktopProduction:
+        description: "Publish Suite desktop production"
+        required: false
+        type: boolean
+        default: false
       destkopReleaseChannel:
         description: "Release channel for Suite desktop auto-update"
         required: false
@@ -20,7 +25,7 @@ on:
           - canary
           - latest
       updateStagingPercentage:
-        description: "Suite desktop auto-update percentage update"
+        description: "Suite desktop auto-update percentage"
         required: false
         type: boolean
         default: false
@@ -31,7 +36,7 @@ on:
 
 jobs:
   sync-canary-suite-desktop:
-    if: ${{ github.event.inputs.destkopReleaseChannel == 'canary' }} && github.repository == 'trezor/trezor-suite-release'
+    if: ${{ github.event.inputs.publishDesktopProduction == 'true' }} && ${{ github.event.inputs.destkopReleaseChannel == 'canary' }} && github.repository == 'trezor/trezor-suite-release'
     name: "Syncing suite-desktop canary"
     environment: suite-production
     runs-on: ubuntu-latest
@@ -48,7 +53,7 @@ jobs:
           aws cloudfront create-invalidation --distribution-id E1ERY5K2OTKKI1 --paths "/suite/releases/desktop/canary/*"
 
   sync-latest-suite-desktop:
-    if: ${{ github.event.inputs.destkopReleaseChannel == 'latest' }} && github.repository == 'trezor/trezor-suite-release'
+    if: ${{ github.event.inputs.publishDesktopProduction == 'true' }} && ${{ github.event.inputs.destkopReleaseChannel == 'latest' }} && github.repository == 'trezor/trezor-suite-release'
     name: "Syncing suite-desktop latest"
     environment: suite-production
     runs-on: ubuntu-latest
@@ -108,7 +113,6 @@ jobs:
           aws s3 cp latest-mac.yml s3://data.trezor.io/suite/releases/desktop/latest/latest-mac.yml
           aws s3 cp latest-linux.yml s3://data.trezor.io/suite/releases/desktop/latest/latest-linux.yml
           aws s3 cp latest-linux-arm64.yml s3://data.trezor.io/suite/releases/desktop/latest/latest-linux-arm64.yml
-
       - name: Invalidate CloudFront cache
         run: |
           aws cloudfront create-invalidation --distribution-id E1ERY5K2OTKKI1 --paths "/suite/releases/desktop/latest/*"
