--- a/tsconfig.json
+++ b/tsconfig.json
@@ -128,6 +128,9 @@
         {
             "path": "packages/connect-explorer-theme"
         },
+        {
+            "path": "packages/connect-examples/webextension-mv3-sw-ts"
+        },
         { "path": "packages/connect-iframe" },
         {
             "path": "packages/connect-plugin-ethereum"
