--- a/.github/workflows/check-code-validation.yml
+++ b/.github/workflows/check-code-validation.yml
@@ -124,6 +124,8 @@ jobs:
         run: yarn verify-project-references
       - name: Detect unused dependencies
         run: yarn depcheck
+      - name: Yarn Dedupe check
+        run: yarn dedupe --check
       - name: Verify Workspace Resolutions
         run: yarn check-workspace-resolutions
       - name: Msg-system Config Validation
