chore(suite-native): move module-passphrase => module-connect-device

--- a/suite-native/module-connect-device/tsconfig.json
+++ b/suite-native/module-connect-device/tsconfig.json
@@ -18,6 +18,9 @@
         { "path": "../intl" },
         { "path": "../link" },
         { "path": "../navigation" },
+        { "path": "../passphrase" },
+        { "path": "../theme" },
+        { "path": "../toasts" },
         { "path": "../../packages/connect" },
         { "path": "../../packages/styles" }
     ]
