--- a/suite-native/module-connect-device/package.json
+++ b/suite-native/module-connect-device/package.json
@@ -26,11 +26,15 @@
         "@suite-native/intl": "workspace:*",
         "@suite-native/link": "workspace:*",
         "@suite-native/navigation": "workspace:*",
+        "@suite-native/passphrase": "workspace:*",
+        "@suite-native/theme": "workspace:*",
+        "@suite-native/toasts": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/styles": "workspace:*",
         "react": "18.2.0",
         "react-native": "0.74.1",
         "react-native-reanimated": "3.11.0",
+        "react-native-svg": "15.3.0",
         "react-redux": "8.0.7"
     }
 }
