--- a/packages/suite-desktop-core/package.json
+++ b/packages/suite-desktop-core/package.json
@@ -17,6 +17,7 @@
         "@sentry/electron": "^4.17.0",
         "@suite-common/message-system": "workspace:*",
         "@suite-common/sentry": "workspace:*",
+        "@suite-common/suite-constants": "workspace:^",
         "@suite-common/suite-types": "workspace:*",
         "@suite-common/suite-utils": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
