refactor(suite-native): rename authorization module

--- a/suite-native/app/tsconfig.json
+++ b/suite-native/app/tsconfig.json
@@ -45,7 +45,7 @@
             "path": "../module-accounts-management"
         },
         { "path": "../module-add-accounts" },
-        { "path": "../module-connect-device" },
+        { "path": "../module-authorize-device" },
         { "path": "../module-dev-utils" },
         { "path": "../module-home" },
         { "path": "../module-onboarding" },
