--- a/suite-native/device-authorization/tsconfig.json
+++ b/suite-native/device-authorization/tsconfig.json
@@ -2,6 +2,8 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": { "outDir": "libDev" },
     "references": [
+        { "path": "../navigation" },
+        { "path": "../passphrase" },
         { "path": "../../packages/connect" }
     ]
 }
