--- a/suite-common/graph/tsconfig.json
+++ b/suite-common/graph/tsconfig.json
@@ -8,6 +8,7 @@
         { "path": "../transaction-cache-engine" },
         { "path": "../wallet-config" },
         { "path": "../wallet-core" },
+        { "path": "../wallet-types" },
         { "path": "../wallet-utils" },
         {
             "path": "../../packages/blockchain-link"
