chore(suite-native): remove passphrase package

--- a/suite-native/app/tsconfig.json
+++ b/suite-native/app/tsconfig.json
@@ -37,6 +37,7 @@
         { "path": "../biometrics" },
         { "path": "../config" },
         { "path": "../device" },
+        { "path": "../device-authorization" },
         { "path": "../feature-flags" },
         { "path": "../intl" },
         { "path": "../message-system" },
@@ -54,7 +55,6 @@
         { "path": "../module-settings" },
         { "path": "../navigation" },
         { "path": "../notifications" },
-        { "path": "../passphrase" },
         { "path": "../receive" },
         { "path": "../settings" },
         { "path": "../state" },
