--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -45,6 +45,7 @@
         "@suite-native/biometrics": "workspace:*",
         "@suite-native/config": "workspace:*",
         "@suite-native/device": "workspace:*",
+        "@suite-native/device-authorization": "workspace:*",
         "@suite-native/feature-flags": "workspace:*",
         "@suite-native/intl": "workspace:*",
         "@suite-native/message-system": "workspace:*",
@@ -60,7 +61,6 @@
         "@suite-native/module-settings": "workspace:*",
         "@suite-native/navigation": "workspace:*",
         "@suite-native/notifications": "workspace:*",
-        "@suite-native/passphrase": "workspace:*",
         "@suite-native/receive": "workspace:*",
         "@suite-native/settings": "workspace:*",
         "@suite-native/state": "workspace:*",
