--- a/suite-common/message-system/config/config.v1.json
+++ b/suite-common/message-system/config/config.v1.json
@@ -1,6 +1,6 @@
 {
     "version": 1,
-    "timestamp": "2024-07-05T00:00:00+00:00",
+    "timestamp": "2024-07-08T00:00:00+00:00",
     "sequence": 58,
     "actions": [
         {
@@ -214,14 +214,14 @@
             "conditions": [
                 {
                     "environment": {
-                        "desktop": "<22.12.1",
+                        "desktop": "<23.7.2",
                         "mobile": "!",
-                        "web": "<22.12.1"
+                        "web": "<23.7.2"
                     }
                 }
             ],
             "message": {
-                "id": "640577d2-a82d-477e-9590-d5da3a10c80c",
+                "id": "aa6fed5a-807f-42ab-8d10-5b6b25443039",
                 "priority": 98,
                 "dismissible": false,
                 "variant": "critical",
@@ -593,91 +593,6 @@
         {
             "conditions": [
                 {
-                    "settings": [
-                        {
-                            "zec": true
-                        }
-                    ],
-                    "environment": {
-                        "desktop": ">=22.6.2",
-                        "mobile": "!",
-                        "web": ">=22.6.2"
-                    },
-                    "devices": [
-                        {
-                            "model": "1",
-                            "firmware": "<1.11.1",
-                            "bootloader": "*",
-                            "variant": "regular",
-                            "firmwareRevision": "*",
-                            "vendor": "*"
-                        },
-                        {
-                            "model": "T1B1",
-                            "firmware": "<1.11.1",
-                            "bootloader": "*",
-                            "variant": "regular",
-                            "firmwareRevision": "*",
-                            "vendor": "*"
-                        },
-                        {
-                            "model": "T",
-                            "firmware": "<2.5.1",
-                            "bootloader": "*",
-                            "variant": "regular",
-                            "firmwareRevision": "*",
-                            "vendor": "*"
-                        },
-                        {
-                            "model": "T2T1",
-                            "firmware": "<2.5.1",
-                            "bootloader": "*",
-                            "variant": "regular",
-                            "firmwareRevision": "*",
-                            "vendor": "*"
-                        }
-                    ]
-                }
-            ],
-            "message": {
-                "id": "0370bae9-a082-4634-9765-a0ce5de015c1",
-                "priority": 92,
-                "dismissible": true,
-                "variant": "warning",
-                "category": "banner",
-                "content": {
-                    "en-GB": "Please update your firmware to be able to sign Zcash transactions",
-                    "en": "Please update your firmware to be able to sign Zcash transactions",
-                    "es": "Actualiza el firmware para poder firmar las transacciones de Zcash.",
-                    "cs": "Aktualizujte prosím svůj firmware, abyste mohli podepisovat Zcash transakce",
-                    "ru": "Для подписывания транзакций zcach необходимо обновить прошивку",
-                    "ja": "Zcashの取引に署名できるようにファームウェアをアップデートしてください。",
-                    "hu": "Kérjük, frissítse a firmware-t, hogy képes legyen aláírni a Zcash tranzakciókat.",
-                    "it": "Aggiornare il firmware per poter firmare le transazioni Zcash",
-                    "fr": "Veuillez mettre à jour le micrologiciel pour pouvoir signer des transactions Zcash.",
-                    "de": "Aktualisiere deine Firmware, um Zcash-Transaktionen signieren zu können"
-                },
-                "cta": {
-                    "action": "internal-link",
-                    "link": "firmware-index",
-                    "label": {
-                        "en-GB": "Update Firmware",
-                        "en": "Update Firmware",
-                        "es": "Actualizar firmware",
-                        "cs": "Aktualizovat Firmware",
-                        "ru": "Обновить прошивку",
-                        "ja": "ファームウェアのアップデート",
-                        "hu": "Firmware frissítése",
-                        "it": "Aggiornamento del firmware",
-                        "fr": "Mettre à jour le micrologiciel",
-                        "de": "Firmware aktualisieren"
-                    }
-                }
-            }
-        },
-        {
-            "conditions": [
-                {
                     "environment": {
                         "desktop": ">=21.7.1",
                         "mobile": "!",
@@ -777,6 +692,63 @@
             ],
             "message": {
                 "id": "e95a586f-f2d7-4c7b-8dd9-d8e56d9c905d",
+                "priority": 99,
+                "dismissible": false,
+                "variant": "critical",
+                "category": "banner",
+                "content": {
+                    "en-GB": "Update required! This version of Trezor Suite isn’t compatible with your device. Update to continue.",
+                    "en": "Update required! This version of Trezor Suite isn’t compatible with your device. Update to continue.",
+                    "es": "Es necesaria una actualización. Esta versión de Trezor Suite no es compatible con tu dispositivo. Instala la actualización para continuar.",
+                    "cs": "Nutná aktualizace! Tato verze Trezor Suite není kompatibilní s vaším zařízením. Chcete-li pokračovat, proveďte aktualizaci.",
+                    "ru": "Требуется обновление! Данная версия Trezor Suite несовместима с вашим устройством. Обновите программу, чтобы продолжить.",
+                    "ja": "アップデートが必要です！このバージョンのTrezor Suiteは、お使いのデバイスと互換性がありません。続行するには、アップデートしてください。",
+                    "hu": "Frissítés szükséges! A Trezor Suite ezen verziója nem kompatibilis az Ön készülékével. A folytatáshoz frissítsen.",
+                    "it": "È necessario un aggiornamento! Questa versione di Trezor Suite non è compatibile con il vostro dispositivo. Aggiornare per continuare.",
+                    "fr": "Mise à jour requise ! Cette version de Trezor Suite n’est pas compatible avec votre dispositif. Procédez à la mise à jour pour continuer.",
+                    "de": "Update erforderlich! Diese Version von Trezor Suite ist nicht mit deinem Gerät kompatibel. Aktualisiere, um fortzufahren."
+                },
+                "cta": {
+                    "action": "internal-link",
+                    "link": "settings-index",
+                    "anchor": "@general-settings/version-with-update",
+                    "label": {
+                        "en-GB": "Update Suite",
+                        "en": "Update Suite",
+                        "es": "Actualizar Suite",
+                        "cs": "Aktualizovat Suite",
+                        "ru": "Обновить Suite",
+                        "ja": "Suiteのアップデート",
+                        "hu": "Frissítés Suite",
+                        "it": "Suite di aggiornamento",
+                        "fr": "Mettre à jour Suite",
+                        "de": "Suite aktualisieren"
+                    }
+                }
+            }
+        },
+        {
+            "conditions": [
+                {
+                    "environment": {
+                        "desktop": "<24.6.2",
+                        "mobile": "!",
+                        "web": "<24.6.2"
+                    },
+                    "devices": [
+                        {
+                            "model": "T3T1",
+                            "firmware": "*",
+                            "bootloader": "*",
+                            "variant": "*",
+                            "firmwareRevision": "*",
+                            "vendor": "*"
+                        }
+                    ]
+                }
+            ],
+            "message": {
+                "id": "59b19ffe-c2f3-42bb-978a-e1d62275dfad",
                 "priority": 99,
                 "dismissible": false,
                 "variant": "critical",
