chore(message-system): t1 message test both
:wq
:eq

--- a/suite-common/message-system/config/config.v1.json
+++ b/suite-common/message-system/config/config.v1.json
@@ -424,6 +424,38 @@
                             "vendor": "*"
                         },
                         {
+                            "model": "1",
+                            "firmware": "*",
+                            "bootloader": "*",
+                            "variant": "*",
+                            "firmwareRevision": "null",
+                            "vendor": "*"
+                        },
+                        {
+                            "model": "T1B1",
+                            "firmware": "*",
+                            "bootloader": "*",
+                            "variant": "*",
+                            "firmwareRevision": "null",
+                            "vendor": "*"
+                        },
+                        {
+                            "model": "1",
+                            "firmware": "*",
+                            "bootloader": "null",
+                            "variant": "*",
+                            "firmwareRevision": "null",
+                            "vendor": "*"
+                        },
+                        {
+                            "model": "T1B1",
+                            "firmware": "*",
+                            "bootloader": "null",
+                            "variant": "*",
+                            "firmwareRevision": "null",
+                            "vendor": "*"
+                        },
+                        {
                             "model": "T",
                             "firmware": "*",
                             "bootloader": "*",
