chore(connect-common): fw version 1.9.0 and 2.3.0 required

--- a/packages/connect-common/files/firmware/t1b1/releases.json
+++ b/packages/connect-common/files/firmware/t1b1/releases.json
@@ -156,7 +156,7 @@
         "changelog": "* Refactor Bitcoin signing"
     },
     {
-        "required": false,
+        "required": true,
         "version": [1, 9, 0],
         "bootloader_version": [1, 8, 0],
         "min_firmware_version": [1, 6, 2],
