--- a/packages/connect-common/files/firmware/t2t1/releases.json
+++ b/packages/connect-common/files/firmware/t2t1/releases.json
@@ -205,7 +205,7 @@
         "changelog": "* Refactor Bitcoin signing"
     },
     {
-        "required": false,
+        "required": true,
         "version": [2, 3, 0],
         "min_firmware_version": [2, 0, 8],
         "min_bootloader_version": [2, 0, 0],
