--- a/packages/suite-desktop-core/package.json
+++ b/packages/suite-desktop-core/package.json
@@ -52,6 +52,7 @@
         "@types/electron-localshortcut": "^3.1.3",
         "electron": "27.3.8",
         "glob": "^10.3.10",
+        "rimraf": "^6.0.1",
         "terser-webpack-plugin": "^5.3.9",
         "webpack": "^5.90.1",
         "xvfb-maybe": "^0.2.1"
