--- a/.github/workflows/update-unused-messages.yml
+++ b/.github/workflows/update-unused-messages.yml
@@ -2,6 +2,11 @@ name: "[Check] remove unused messages and create PR"
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - develop
+    paths:
+      - .github/workflows/update-unused-messages.yml
 
 jobs:
   translations-unused:
