--- a/packages/suite/package.json
+++ b/packages/suite/package.json
@@ -119,7 +119,7 @@
     "devDependencies": {
         "@crowdin/cli": "^4.0.0",
         "@formatjs/cli": "^6.2.7",
-        "@testing-library/react": "14.2.1",
+        "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "14.5.2",
         "@types/file-saver": "^2.0.6",
         "@types/invity-api": "1.0.21",
@@ -132,7 +132,7 @@
         "@types/react-qr-reader": "^2.1.7",
         "@types/react-test-renderer": "^18.0.7",
         "@types/react-window": "^1.8.8",
-        "@types/redux-logger": "^3.0.11",
+        "@types/redux-logger": "^3.0.13",
         "@types/redux-mock-store": "^1.0.6",
         "@types/semver": "^7.5.4",
         "@types/ua-parser-js": "^0.7.39",
